--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -65,7 +65,16 @@
 
   <div class="product product--{{ section.settings.media_size }} product--{{ section.settings.media_position }} product--{{ section.settings.gallery_layout }} product--mobile-{{ section.settings.mobile_thumbnails }} grid grid--1-col {% if product.media.size > 0 %}grid--2-col-tablet{% else %}product--no-media{% endif %}">
     <div class="grid__item product__media-wrapper{% if section.settings.media_position == 'right' %} medium-hide large-up-hide{% endif %}">
-      {% render 'product-media-gallery', variant_images: variant_images %}
+      {% if settings.use_flicking_product_media_gallery %}
+        <div id="gallery-show-on-desktop-only">
+          {% render 'splide-product-media-gallery', variant_images: variant_images %}
+        </div>
+        <div id="gallery-show-on-mobile-only">
+          {% render 'product-media-gallery', variant_images: variant_images %}
+        </div>
+      {% else %}
+        {% render 'product-media-gallery', variant_images: variant_images %}
+      {% endif %}
     </div>
     <div class="product__info-wrapper grid__item{% if settings.page_width > 1400 and section.settings.media_size == "small" %} product__info-wrapper--extra-padding{% endif %}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}">
       <product-info
